convert to jekyll

--- a/index.html
+++ b/index.html
@@ -1,44 +1,15 @@
-<!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Fonts by Pike</title>
-
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="javascripts/scale.fix.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-  </head>
-  <body>
-    <div class="wrapper">
-      <header>
-        <h1>Fonts</h1>
-        <p>Testcase repository for i18n of MozTT and friends</p>
-        <p class="view"><a href="https://github.com/Pike/fonts">View the Project on GitHub <small>Pike/fonts</small></a></p>
-        <ul>
-          <li><a href="https://github.com/Pike/fonts/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/Pike/fonts/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/Pike/fonts">View On <strong>GitHub</strong></a></li>
-        </ul>
-      </header>
-      <section>
-        <h3>Existing testcases:</h3>
+---
+layout: default
+title: Fonts
+tagline: Testcase repository for i18n of MozTT and friends
+---
+<h3>Existing testcases:</h3>
+<table>
+{% for item in site.posts %}
+  <tr><td><a href="{{ item.url }}">{{item.title}} ({{item.locale}})</a></td></tr>
+{% endfor %}
+</table>
 
 <h3>Add Testcase:</h3>
 
 <p>You can create new testcase with fontconfig and this webtool.</p>
-      </section>
-    </div>
-    <footer>
-      <p>Project maintained by <a href="https://github.com/Pike">Pike</a></p>
-      <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
-    </footer>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-    
-  </body>
-</html>
