--- a/create-test/index.html
+++ b/create-test/index.html
@@ -7,12 +7,13 @@ extra_scripts:
  - http://code.jquery.com/jquery-1.9.1.min.js
  - ../javascripts/create.js
 ---
-<p>Run <code>fc-validate -l ab -v MozTT</code> and paste the resulting
+<p>Run <code>fc-validate -l ab -v your-font-file</code> and paste the resulting
 missing code points into the textarea below. Then save the generated
 testcase to <code>_posts</code> with the suggested name.</p>
 
 <label for="locale">Locale:</label> <input id="locale" placeholder="ab-CD"><br>
 <label for="language">Language:</label> <input id="language"><br>
+<label for="language">Font family:</label> <input id="family" placeholder="sans-serif"><br>
 <textarea rows="12"></textarea><br>
 <button id="create_test" disabled>create testcase</button>
 <a id="download" disabled>Download</a>
