--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@ tagline: Testcase repository for i18n of MozTT and friends
 <h3>Existing testcases:</h3>
 <table>
 {% for item in site.posts %}
-  <tr><td><a href="{{ site.baseurl }}{{ item.url }}">{{item.title}} ({{item.locale}})</a></td></tr>
+  <tr>
+    <td><a href="{{ site.baseurl }}{{ item.url }}">{{item.title}} ({{item.locale}})</a></td>
+    <td>{{ item.family }}</td>
+  </tr>
 {% endfor %}
 </table>
 
